samples/_failures_safe/1761141588_fb95e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01cdc26c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_01cdc26c.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_01cdc26c.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01cdc26c.c:160:13: error: expected declaration or statement at end of input
